--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,4 @@
 {
-  "plugins": [
-    "babel-plugin-transform-object-rest-spread"
-  ],
+  "plugins": ["transform-object-rest-spread"],
   "presets": [["env", { "targets": { "node": "6.10" } }], "flow"]
 }
