--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "eslint-plugin-react": "^7.5.1",
     "eslint-watch": "^3.1.3",
     "flow-bin": "^0.60.1"
+  },
+  "dependencies": {
+    "uuid": "^3.1.0"
   }
 }
