--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-react": "^7.5.1",
     "eslint-watch": "^3.1.3",
-    "flow-bin": "^0.60.1"
+    "flow-bin": "^0.60.1",
+    "prettier": "^1.11.1"
   },
   "dependencies": {
     "uuid": "^3.1.0"
