--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-react": "^7.5.1",
     "eslint-watch": "^3.1.3",
-    "flow-bin": "^0.60.1",
     "prettier": "^1.11.1"
   },
   "dependencies": {
+    "flow-bin": "^0.73.0",
+    "immutable": "^3.8.2",
     "uuid": "^3.1.0"
   }
 }
