--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prettier": "^1.11.1"
   },
   "dependencies": {
-    "flow-bin": "^0.73.0",
+    "flow-bin": "0.75.0",
     "immutable": "^3.8.2",
     "uuid": "^3.1.0"
   }
